<?xml version="1.0"?>
<!--<![CDATA[
	===============LICENSE_START=======================================================
	Acumos
	===================================================================================
	Copyright (C) Nordix Foundation
	===================================================================================
	This Acumos software file is distributed by Nordix Foundation
	under the Apache License, Version 2.0 (the "License");
	you may not use this file except in compliance with the License.
	You may obtain a copy of the License at

	http://www.apache.org/licenses/LICENSE-2.0

	This file is distributed on an "AS IS" BASIS,
	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
	See the License for the specific language governing permissions and
	limitations under the License.
	===============LICENSE_END=========================================================
	]]>-->
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.acumos.license-usage-manager</groupId>
	<artifactId>lum-java-rest-client</artifactId>
	<version>0.26.5-SNAPSHOT</version>
	<name>LUM Java Rest Client</name>
	<properties>
		<old.version>0.23.1-SNAPSHOT</old.version>
		<default.package>org.acumos.lum</default.package>
		<openapi-generator-version>4.0.3</openapi-generator-version>
		<gson-fire-version>1.8.3</gson-fire-version>
		<swagger-core-version>1.5.22</swagger-core-version>
		<okhttp-version>3.14.2</okhttp-version>
		<gson-version>2.8.5</gson-version>
		<commons-lang3-version>3.9</commons-lang3-version>
		<threetenbp-version>1.3.8</threetenbp-version>
		<maven-plugin-version>1.0.0</maven-plugin-version>
		<javax-annotation-version>1.0</javax-annotation-version>
		<junit-version>4.12</junit-version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>
	<dependencies>
		<dependency>
				<groupId>io.swagger</groupId>
				<artifactId>swagger-annotations</artifactId>
				<version>${swagger-core-version}</version>
		</dependency>
		<!-- @Nullable annotation -->
		<dependency>
				<groupId>com.google.code.findbugs</groupId>
				<artifactId>jsr305</artifactId>
				<version>3.0.2</version>
		</dependency>
		<dependency>
				<groupId>com.squareup.okhttp3</groupId>
				<artifactId>okhttp</artifactId>
				<version>${okhttp-version}</version>
		</dependency>
		<dependency>
				<groupId>com.squareup.okhttp3</groupId>
				<artifactId>logging-interceptor</artifactId>
				<version>${okhttp-version}</version>
		</dependency>
		<dependency>
				<groupId>com.google.code.gson</groupId>
				<artifactId>gson</artifactId>
				<version>${gson-version}</version>
		</dependency>
		<dependency>
				<groupId>io.gsonfire</groupId>
				<artifactId>gson-fire</artifactId>
				<version>${gson-fire-version}</version>
		</dependency>
		<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>${commons-lang3-version}</version>
		</dependency>
		<dependency>
				<groupId>org.threeten</groupId>
				<artifactId>threetenbp</artifactId>
				<version>${threetenbp-version}</version>
		</dependency>
		<dependency>
				<groupId>javax.annotation</groupId>
				<artifactId>jsr250-api</artifactId>
				<version>${javax-annotation-version}</version>
		</dependency>
		<!-- test dependencies -->
		<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit-version}</version>
				<scope>test</scope>
		</dependency>
</dependencies>
	<build>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>11</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<argLine> --illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<argLine> --illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.0.0-M2</version>
				<executions>
					<execution>
						<id>enforce-versions</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<bannedPlugins>
									<!-- will only display a warning but does not fail the build. -->
									<level>WARN</level>
									<excludes>
										<exclude>org.apache.maven.plugins:maven-verifier-plugin</exclude>
									</excludes>
									<message>Please consider using the maven-invoker-plugin (http://maven.apache.org/plugins/maven-invoker-plugin/)!</message>
								</bannedPlugins>
								<requireMavenVersion>
									<version>3.0.3</version>
								</requireMavenVersion>
								<requireJavaVersion>
									<version>11</version>
								</requireJavaVersion>
								<!-- <requireOS>
                  <family>unix</family>
                </requireOS> -->
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>add-source</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>${basedir}/generated-sources/java/main/</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.openapitools</groupId>
				<artifactId>openapi-generator-maven-plugin</artifactId>
				<!-- RELEASE_VERSION -->
				<version>4.1.3</version>
				<!-- /RELEASE_VERSION -->
				<executions>
					<execution>
						<goals>
							<goal>generate</goal>
						</goals>

						<configuration>
							<inputSpec>${project.basedir}/../lum-server/lum-server-api/lum-server-API.yaml</inputSpec>
							<generatorName>java</generatorName>
							<configOptions>
								<sourceFolder>src/gen/java/main</sourceFolder>
							</configOptions>
							<output>${project.build.directory}/generated-sources</output>

							<apiPackage>${default.package}.handler</apiPackage>
							<generateApiTests>false</generateApiTests>
							<generateModelTests>false</generateModelTests>
							<modelPackage>${default.package}.model</modelPackage>
							<invokerPackage>${default.package}.handler</invokerPackage>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.1.1</version>
				<configuration>
					<doclint>none</doclint>
					<tags>
						<tag>
							<name>http.response.details</name>
							<placement>a</placement>
							<head>Http Response Details:</head>
						</tag>
					</tags>
					<!-- Silence error javax.interceptor.InterceptorBinding not found -->
					<additionalDependencies>
						<additionalDependency>
							<groupId>javax.interceptor</groupId>
							<artifactId>javax.interceptor-api</artifactId>
							<version>1.2</version>
						</additionalDependency>
					</additionalDependencies>
				</configuration>

			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.7.1</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>3.0.0</version>
			</plugin>

		</plugins>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jxr-plugin</artifactId>
				<version>2.3</version>
			</plugin>
			<plugin>
				<groupId>com.github.siom79.japicmp</groupId>
				<artifactId>japicmp-maven-plugin</artifactId>
				<version>0.14.1</version>
				<configuration>
					<oldVersion>
						<dependency>
							<groupId>org.acumos.license-usage-manager</groupId>
							<artifactId>lum-java-rest-client</artifactId>
							<version>${old.version}</version>
							<type>jar</type>
						</dependency>
					</oldVersion>
					<newVersion>
						<file>
							<path>${project.build.directory}/${project.artifactId}-${project.version}.${project.packaging}</path>
						</file>
					</newVersion>
					<parameter>
						<!-- see documentation -->
					</parameter>
				</configuration>
				<reportSets>
					<reportSet>
						<reports>
							<report>cmp-report</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
		</plugins>
	</reporting>

</project>
